MacViews: delete entire composed glyph when deleting backward

This matches NSTextView's behavior by creating a CFString and asking
what Cocoa thinks should happen. This also handles UTF-16 surrogate
pairs, so this change splits that check to the non-Mac code path.

Bug: 826794
Change-Id: I8fce5510e3cd483533699edd1ba33118ce55b44e
Reviewed-on: https://chromium-review.googlesource.com/986475
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548769}
Former-commit-id: a903c6f4d5b9f2f4ac9461bcffa9d1e5f95237b9