ui/views/style/platform_style_mac.mm
@@ -5,12 +5,31 @@
 #include "ui/views/style/platform_style.h"
 
 #include "base/memory/ptr_util.h"
+#include "base/strings/sys_string_conversions.h"
 #include "ui/base/ui_features.h"
 #include "ui/gfx/color_utils.h"
 #include "ui/views/controls/button/label_button.h"
 #import "ui/views/controls/scrollbar/cocoa_scroll_bar.h"
 
 #import <Cocoa/Cocoa.h>
+
+extern "C" {
+// From CFString private headers.
+typedef CF_ENUM(CFIndex, CFStringCharacterClusterType) {
+  kCFStringGraphemeCluster = 1, /* Unicode Grapheme Cluster */
+  kCFStringComposedCharacterCluster =
+      2, /* Compose all non-base (including spacing marks) */
+  kCFStringCursorMovementCluster =
+      3, /* Cluster suitable for cursor movements */
+  kCFStringBackwardDeletionCluster =
+      4 /* Cluster suitable for backward deletion */
+};
+
+CFRange CFStringGetRangeOfCharacterClusterAtIndex(
+    CFStringRef string,
+    CFIndex index,
+    CFStringCharacterClusterType type);
+}
 
 namespace views {
 
@@ -45,4 +64,23 @@ void PlatformStyle::OnTextfieldEditFailed() {
   NSBeep();
 }
 
+// static
+gfx::Range PlatformStyle::RangeToDeleteBackwards(const base::string16& text,
+                                                 size_t cursor_position) {
+  if (cursor_position == 0)
+    return gfx::Range();
+
+  base::ScopedCFTypeRef<CFStringRef> cf_string(
+      CFStringCreateWithCharactersNoCopy(kCFAllocatorDefault, text.data(),
+                                         text.size(), kCFAllocatorNull));
+  CFRange range_to_delete = CFStringGetRangeOfCharacterClusterAtIndex(
+      cf_string, cursor_position - 1, kCFStringBackwardDeletionCluster);
+
+  if (range_to_delete.location == NSNotFound)
+    return gfx::Range();
+
+  // The range needs to be reversed to undo correctly.
+  return gfx::Range(range_to_delete.location + range_to_delete.length,
+                    range_to_delete.location);
+}
 }  // namespace views
